implementação rudimentar de inventario