@@ -1,6 +1,6 @@
 package dungeonfighter.batalha;
-
 import dungeonfighter.DungeonFighter;
+import dungeonfighter.Tabuleiro;
 import dungeonfighter.entidades.itens.Item;
 import dungeonfighter.entidades.itens.ItemDeCura;
 import dungeonfighter.entidades.personagens.*;
@@ -16,12 +16,14 @@ public class Batalha extends JPanel {
     private final PainelAcoes painelAcoes;
     private final Heroi heroi;
     private final Inimigo inimigo;
+    private final Tabuleiro tabuleiro;
     private int especialBuffer = 0;
 
     public Batalha(Heroi heroi, Inimigo inimigo) {
 
         this.heroi = heroi;
         this.inimigo = inimigo;
+        this.tabuleiro = DungeonFighter.getInstanceDungeonFighter().getTabuleiro();
 
         setLayout(new GridBagLayout());
         setBackground(Color.GREEN);
@@ -103,11 +105,12 @@ public class Batalha extends JPanel {
     public void usarItem() {
         ArrayList<Item> bolsa = heroi.getBolsa();
         if (!bolsa.isEmpty()) {
-            Item item = bolsa.get(0);
+            Item item = bolsa.getFirst();
             if (item instanceof ItemDeCura itemDeCura) {
                 heroi.curar(itemDeCura.getCura());
                 JOptionPane.showMessageDialog(null, heroi.getNome() + " usou " + item.getNome() + " e curou "
                         + itemDeCura.getCura() + " pontos de vida.");
+                bolsa.remove(item);
             }
         } else {
             JOptionPane.showMessageDialog(null, "Bolsa vazia");
@@ -121,6 +124,7 @@ public class Batalha extends JPanel {
                     inimigo.getNome() + " errou o ataque e sofreu " + danoInimigo * (-1) + " de dano.\n");
         }
         atualizarVida();
+        tabuleiro.updateInventario();
 
     }
 
@@ -131,7 +135,7 @@ public class Batalha extends JPanel {
     public void atualizarVida() {
         if (heroi.getVida() <= 0) {
             JOptionPane.showMessageDialog(null, "Você morreu. Game Over :(");
-            DungeonFighter.getInstanceDungeonFighter().reiniciarJogo();;
+            DungeonFighter.getInstanceDungeonFighter().reiniciarJogo();
         } else if (inimigo.getVida() <= 0) {
             JOptionPane.showMessageDialog(null, inimigo.getNome() + " derrotado! Parabéns!");
             DungeonFighter.getInstanceDungeonFighter().finalizarBatalha(true);
